# workdesk-runner

./: .gitignore  download_ffmpeg.ps1  export_presets.cfg  icon.svg.import  openxr_action_map.tres  project.godot  serverstarter.ps1  setup_deps.ps1  test_gozen_api.gd  test_gozen_api.gd.uid  workdesk-runner.sln
.github/workflows/: build-h264-decoder.yml
Icons/: WhatsApp Video 2026-01-30 at 12.54.04 PM.mp3.import  eye_selected.png.import  eye_unselected.png.import  home.png.import  menue.png.import  user.png.import  vr_selected.png.import  vr_unselected.png.import
Icons/(2) WhatsApp_files/: -BERKHqHjAZmH__gbIfYobU0sr-k7QgkZFHfHJik5QJT.css  5C5nTIBfwrV.js.download  7NwO7eMQ9d0.js.download  Fnp75GhZlTW.js.download  iEVHXvw7CNq.js.download  (+1 more)
addons/ExpoIcons/: README.md  main.gd  main.gd.uid  plugin.cfg
addons/gde_gozen/: icon.svg.import  icon.webp.import  (+1 more)
addons/h264_decoder/: .sconsign.dblite  CMakeLists.txt  README.md  SConstruct  build_windows.bat  h264_decoder.gdextension  h264_decoder.gdextension.uid  trigger.txt
addons/h264_decoder/src/: h264_decoder.cpp  h264_decoder.h  register_types.cpp
gde_gozen/: gozen.gdextension  icon.svg.import  icon.webp.import
scenes/: Main.tscn
scripts/: desktop_stream_client.gd  desktop_stream_client.gd.uid  main.gd  main.gd.uid  screen_controller.gd  screen_controller.gd.uid  screen_ui_panel.gd  screen_ui_panel.gd.uid  validate_h264_extension.gd  validate_h264_extension.gd.uid  xr_pointer.gd  xr_pointer.gd.uid
server-dotnet/: DxgiCapture.cs  H264Encoder.cs  Program.cs  WorkdeskServer.csproj
shaders/: yuv_shader.gdshader  yuv_shader.gdshader.uid
(+69 files in other folders)
